--- a/Desafio HTML/Glossario/css/avisos.css
+++ b/Desafio HTML/Glossario/css/avisos.css
@@ -1,58 +1,110 @@
-#wrap_inferior{
-    position: relative;
-    width: 100%;
-    height: 50px;
-    margin: 20px;
-  }
-  
-  #wrap_inferior h2{
-    position: absolute;
-    right: 1em;
-    text-align: center;
-    display: block;
-  }
-
-#wrap_left-right{
-    position: relative;
-    width: 100%;
-    margin-bottom: 100px;
+.inferior{
+  text-align: end;
+  display: block;
+  margin: 10px;
 }
 
-#wrap_left-right h2{
-    position: absolute;
-    right: 100px;
+.right-down{
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  position: relative;
+}
+
+.right-down h1{
+  margin-right: 30px;
 }
 
 #right{
-    position: absolute;
-    right: 50px;
-    top: 5px;
+  position: absolute;
+  right: 0;
+  top: 5px;
 }
 
 #down{
-    position: absolute;
-    right: 110px;
-    top: 50px;
+  position: absolute;
+  top: 40px;
+  right: 40px;
 }
 
-#wrap_up-left{
-    position: relative;
-    width: 100%;
+/* ---------------------------------------------------- */
+
+.glossario_margin{
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin: 1em 0;
 }
 
-#wrap_up-left h2{
-    position: absolute;
-    top: 30px;
-    left: 50px;
+.glossario_margin img{
+  margin-right: 1em;
+}
+
+.glossario_margin h3{
+  background-color: lightgray;
+  padding: 1em;
+}
+
+/* ---------------------------------------------------- */
+
+.glossario-superior{
+  display: flex;
+  justify-content: space-between;
+}
+
+.glossario-central{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.glossario-central h3{
+  text-align: center;
+  padding: 1em;
+  background-color: lightgray;
+  margin: 1em 0;
+}
+
+.glossario-central img{
+  width: 24px;
+}
+
+/* ------------------------------------------------------ */
+
+.up-left{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+}
+
+.up-left img{
+  width: 24px;
+}
+
+.up-left h1{
+  position: absolute;
+  top: 1em;
+  left: 0.5em;
 }
 
 #left{
-    position: absolute;
-    top: 30px;
+  position: absolute;
+  top: 2.4em;
 }
 
 #up{
-    position: absolute;
-    top: 0px;
-    left: 50px;
+  position: absolute;
+  left: 2em;
+  top: 0.5em;
 }
+
+
+
+
+
+
+
+
+
