--- a/Desafio HTML/Glossario/css/style.css
+++ b/Desafio HTML/Glossario/css/style.css
@@ -6,16 +6,18 @@
 }
 
 main {
-  margin: 0 20em;
+  margin: 0 15em;
 }
 
 header {
   width: 100%;
   background-color: rgb(106, 141, 181);
   color: white;
-  text-align: center;
   padding: 3em 2em;
-  margin-bottom: 5em;
+  margin-bottom: 2em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 header h1 {
@@ -28,19 +30,18 @@ header h1 {
 
 .content{
   border: solid 0.5em rgb(106, 141, 181);
-  margin: 2em;
-  padding: 4em;
-  position: relative;
+  margin: 1em;
+  padding: 0 4em 4em 4em;
 }
 
-.content h3{
+.content-glossario{
   text-align: center;
   display: block;
-  margin: 3.5em 0;
+  margin-top: 1em;
 }
 
 .content p{
-  margin-bottom: 3.5em;
+  margin-bottom: 2em;
   display: block;
 }
 
