--- a/Desafio HTML/Formulario/styles.css
+++ b/Desafio HTML/Formulario/styles.css
@@ -6,16 +6,13 @@
 
 body{
   margin: 1em;
+  width: 90%;
   max-width: 500px;
 }
 
 .content{
   display: flex;
   flex-direction: column;
-}
-
-fieldset{
-  padding: 10px;
 }
 
 label,
@@ -45,10 +42,17 @@ input{
 
 button{
   padding: 2px;
-  margin-left: 10px;
-  margin-top: 10px;
   width: 50px;
+  margin: 10px;
+
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  text-align: center;
+  text-decoration: none;
 }
+
+
 
 .check-email{
   display: flex;
