--- a/Desafio HTML/Glossario/css/style.css
+++ b/Desafio HTML/Glossario/css/style.css
@@ -40,11 +40,6 @@ header h1 {
   margin-top: 1em;
 }
 
-.content p{
-  margin-bottom: 2em;
-  display: block;
-}
-
 footer{
   height: 6.25em;
   background-color: rgb(106, 141, 181);
@@ -55,6 +50,15 @@ footer{
   margin-left: auto;
   margin-right: auto;
   padding: 1em 0;
+}
+
+dt{
+  font-weight: bold;
+}
+
+dd{
+  margin-left: 10px;
+  margin-bottom: 1em;
 }
 
 
